--- a/packages/@okta/i18n/src/properties/login.properties
+++ b/packages/@okta/i18n/src/properties/login.properties
@@ -815,3 +815,17 @@ oie.success.redirect = You are being redirected
 oie.go.back = Go back
 oie.enroll.switch.authenticator = Return to authenticator list
 oie.verification.switch.authenticator = Verify with something else
+
+## Device Enrollment Terminal
+enroll.title.oda=Download Okta Verify
+enroll.title.mdm=Additional setup required
+enroll.explanation.download=To sign in using Okta Verify, you will need to set up Okta Verify on this device. Download the Okta Verify app from {0}.
+enroll.explanation.signInUrl=In the app, follow the instructions to add an organizational account. When prompted, choose Sign In, then enter the sign-in URL:<br>{0}
+enroll.appleStore=App Store
+enroll.googleStore=Google Play Store
+enroll.explanation.mdm=To access this app, your device needs to meet your organization's security requirements. Follow the instructions below to continue.
+enroll.mdm.copyLink=Copy link to clipboard
+enroll.mdm.copyLink.success=Link copied.
+enroll.mdm.step1=Tap the Copy Link button below.
+enroll.mdm.step2=On this device, open your browser, then paste the copied link into the address bar.
+enroll.mdm.step3=Follow the instructions in your browser to set up {0}, then try accessing this app again.
